exports[`Layout renders with props 1`] = `
<div
  className="background--light-primary"
  style={
    Object {
      "height": "100%",
      "overflowY": "hidden",
    }
  }>
  <section
    className="hard background--light-secondary">
    <h6
      className="push-left soft-half-bottom soft-top">
      Recommended by NewSpring
    </h6>
  </section>
  <Hero
    content={
      Object {
        "content": Object {
          "images": Array [
            Object {
              "fileLabel": "2:1",
              "url": "http://test.com/2x1.jpg",
            },
          ],
        },
        "meta": Object {
          "urlTitle": "test-title",
        },
        "title": "test title",
      }
    }
    hideDate={true} />
  <section
    className="soft-half background--light-secondary">
    <div
      className="grid flush">
      <MiniCard
        content={
          Object {
            "content": Object {
              "images": Array [
                Object {
                  "fileLabel": "2:1",
                  "url": "http://test.com/2x1.jpg",
                },
              ],
            },
            "meta": Object {
              "date": "12-12-2012",
              "urlTitle": "recommend-one",
            },
            "title": "recommend one",
          }
        }
        link="recommend-one"
        title="recommend one" />
      <MiniCard
        content={
          Object {
            "content": Object {
              "images": Array [
                Object {
                  "fileLabel": "2:1",
                  "url": "http://test.com/2x1.jpg",
                },
              ],
            },
            "meta": Object {
              "date": "12-12-2012",
              "urlTitle": "recommend-two",
            },
            "title": "recommend two",
          }
        }
        link="recommend-two"
        title="recommend two" />
    </div>
  </section>
  <section
    className="soft-half background--light-secondary">
    <div
      className="one-whole text-center">
      <h5
        className="flush soft-bottom">
        Recently Liked By Others
      </h5>
    </div>
    <Component />
  </section>
  <div
    className="soft-half background--light-secondary">
    <div
      className="card soft one-whole">
      <div
        className="card__item">
        <p
          className="flush">
          <small>
            <em>
              Are you looking for 
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-one">
                  text one
                </Link>
              </span>
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-two">
                  text two
                </Link>
              </span>
              ?
            </em>
          </small>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout works without featured item 1`] = `
<div
  className="background--light-primary"
  style={
    Object {
      "height": "100%",
      "overflowY": "hidden",
    }
  }>
  <section
    className="hard background--light-secondary">
    <h6
      className="push-left soft-half-bottom soft-top">
      Recommended by NewSpring
    </h6>
  </section>
  <section
    className="soft-half background--light-secondary">
    <div
      className="grid flush">
      <MiniCard
        content={
          Object {
            "content": Object {
              "images": Array [
                Object {
                  "fileLabel": "2:1",
                  "url": "http://test.com/2x1.jpg",
                },
              ],
            },
            "meta": Object {
              "date": "12-12-2012",
              "urlTitle": "recommend-one",
            },
            "title": "recommend one",
          }
        }
        link="recommend-one"
        title="recommend one" />
      <MiniCard
        content={
          Object {
            "content": Object {
              "images": Array [
                Object {
                  "fileLabel": "2:1",
                  "url": "http://test.com/2x1.jpg",
                },
              ],
            },
            "meta": Object {
              "date": "12-12-2012",
              "urlTitle": "recommend-two",
            },
            "title": "recommend two",
          }
        }
        link="recommend-two"
        title="recommend two" />
    </div>
  </section>
  <section
    className="soft-half background--light-secondary">
    <div
      className="one-whole text-center">
      <h5
        className="flush soft-bottom">
        Recently Liked By Others
      </h5>
    </div>
    <Component />
  </section>
  <div
    className="soft-half background--light-secondary">
    <div
      className="card soft one-whole">
      <div
        className="card__item">
        <p
          className="flush">
          <small>
            <em>
              Are you looking for 
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-one">
                  text one
                </Link>
              </span>
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-two">
                  text two
                </Link>
              </span>
              ?
            </em>
          </small>
        </p>
      </div>
    </div>
  </div>
</div>
`;
